--- a/lab_java_study/homework_202303/.settings/org.eclipse.core.resources.prefs
+++ b/lab_java_study/homework_202303/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
-encoding//src/homework/itwill/java=MS949
+encoding//src/homework/itwill/java=UTF-8
+encoding//src/homework/itwill/java/Homework01.java=MS949
 encoding/<project>=UTF-8
